Added Task Manager project to portfolio

--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
                                 </li>
                             </ul>
                         </div>
+
+                        <div class="project-tile">
+                            <a href="https://jamie764.github.io/TaskManager/" target="_blank" class="title_link"><h3>Task Manager</h3></a>
+                            <a href="https://jamie764.github.io/TaskManager/" target="_blank" class="img_link"><img src="https://github.com/Jamie764/TaskManager/blob/main/Screenshot.png?raw=true" alt="Project Logo" width="100%"></a>
+                            <ul class="project-highlights">
+                                <li>
+                                    Local Data Storage
+                                </li>
+                                <li>
+                                    Keep track of completed and incomplete tasks
+                                </li>
+                                <li>
+                                    Tasks placed along a timeline
+                                </li>
+                                <li>
+                                    Leap years are accounted for
+                                </li>
+
+                            </ul>
+                         </div>
                     </div>
                     <div class="divider-small"></div>
                 </section>
